services/tududi/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tududi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: tududi
      app.kubernetes.io/name: tududi
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: false
      containers:
        - name: tududi
          image: tududi
          ports:
            - name: http
              protocol: TCP
              containerPort: 3002
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /app/backend/db
              name: database
            - mountPath: /app/backend/uploads
              name: uploads
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: tududi-database
        - name: uploads
          persistentVolumeClaim:
            claimName: tududi-uploads
