services/tududi/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tududi
spec:
  selector:
    app.kubernetes.io/instance: tududi
    app.kubernetes.io/name: tududi
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
