services/tududi/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tududi
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - tududi.int.fivebytestudios.com
  rules:
    - backendRefs:
        - name: tududi
          port: 80
